# home-assistant-omnik-inverter

./: .codespell-ignore  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  bandit.yaml  hacs.json  info.md  mypy.ini  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml  renovate.json  stale.yml
.github/workflows/: codeql.yaml  draft-release.yaml  hacs.yml  hassfest.yaml  issues.yaml  labels.yaml  linting.yaml  requirements.txt  stale.yaml  sync-labels.yaml  verify-pr-labels.yaml
custom_components/omnik_inverter/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  models.py  sensor.py  strings.json
custom_components/omnik_inverter/translations/: de.json  en.json  nl.json
